# MarkItUp

./: .gitignore  Cargo.toml  Config.toml  Makefile.toml  README.md  content.md  drive.sh  gantt.md  index.html
Audio2Markdown/: Cargo.toml
Audio2Markdown/src/: main.rs
Docx2Markdown/: Cargo.toml
Docx2Markdown/src/: main.rs
Docx2Xml/: Cargo.toml
Docx2Xml/src/: main.rs
Html2Markdown/: Cargo.toml
Html2Markdown/src/: main.rs
Image2Base64/: 1  Cargo.toml
Image2Base64/src/: main.rs
MarkItUp/: Cargo.toml  output.md
MarkItUp/src/: .main.rs.swo  .main.rs.swp  main.rs
MarkItUp/src/model/: XmlToMarkdown.rs  mod.rs
Pdf2Docx/: Cargo.toml
Xml2Markdown/: Cargo.toml
Xml2Markdown/src/: main.rs
Xml2Markdown/src/model/: XmlToMarkdown.rs
gui/: :::  Cargo.toml
gui/src/: main.rs
llm/: Cargo.toml
llm/src/: example.txt  helper.rs  main.rs  使用说明.txt
llm_api/: Cargo.toml
llm_api/src/: helper.rs  main.rs
llm_api4image/src/: main.rs
pdf2docx/src/: main.rs
src/: config.rs  lib.rs  main.rs
src/converter/: image2png.rs  mod.rs  video2wav.rs
src/generator/: image2md.rs  mod.rs
src/generator/pdf2md/: mod.rs  pdf_element.rs  pdf_page.rs  pdf_state.rs
