[package]
name = "Audio2Markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }  # 命令行解析
vosk = "0.3.1"                                       # 离线语音识别
hound = "3.5"                                      # WAV 音频处理
anyhow = "1.0"                                     # 错误处理
