[package]
name = "Image2Base64"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
image = "0.24"
base64="0.21"
clap={version="4.4",features=["derive"]}
anyhow="1.0"
mime_guess ="2.0"
serde = { version = "1.0", features = ["derive"] }
