[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27" # 请根据 crates.io 检查最新版本
egui = "0.27"   # 确保版本与 eframe 匹配
rfd = "0.14"    # 跨平台文件对话框，请检查最新版本
tokio = { version = "1", features = ["full"] } # rfd 需要一个运行时，tokio 是一个常用选择
downcast-rs = "1.2" # 添加 downcast-rs 依赖
parking_lot = "0.12" # 新增: 用于 Mutex
once_cell="1.19"
pulldown-cmark = "0.9"
