[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.37", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 编码
base64 = "0.21"